--- a/index.html
+++ b/index.html
@@ -31,7 +31,49 @@
 
 
     <main>
+        <section class="teams display_flex">
+            <div class="team_images">
+                <img src="images/team1.png" alt="two architect discussing">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="features">
+                <h3 class="section_title"><span id="quick_list"class="text_lightgray">Quick list</span> <span id="of_out">of Our</span> <span class="text_primary">Features</span></h3>
 
+                <p class="feature_descrioption text_lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn">Explore More</button>
+            </div>
+        </section>
+
+
+    
+        <section>
+            <h3 class="section_title">Some Facts</h3>
+            <p class="text_lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts_container">
+                <div class="fact">
+                    <img src="" alt="" class="fact_icon">
+                    <h4 class="fact_number"></h4>
+                    <h5 class="fact_name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact_icon">
+                    <h4 class="fact_number"></h4>
+                    <h5 class="fact_name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact_icon">
+                    <h4 class="fact_number"></h4>
+                    <h5 class="fact_name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact_icon">
+                    <h4 class="fact_number"></h4>
+                    <h5 class="fact_name"></h5>
+                </div>
+            </div>
+        </section>
     </main> 
 
     <footer>
