--- a/index.html
+++ b/index.html
@@ -48,30 +48,42 @@
 
 
     
-        <section>
+        <section class="some_facts">
             <h3 class="section_title">Some Facts</h3>
             <p class="text_lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="facts_container">
-                <div class="fact">
-                    <img src="" alt="" class="fact_icon">
-                    <h4 class="fact_number"></h4>
-                    <h5 class="fact_name"></h5>
+                <div class="fact_card display_flex">
+                    <div class="fact">
+                    <img src="images/icons/ribon.png" alt="" class="fact_icon">
+                    <h4 class="fact_number">54</h4>
+                    <h5 class="fact_name text_lightgray">Awards Winnings</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact_icon">
-                    <h4 class="fact_number"></h4>
-                    <h5 class="fact_name"></h5>
+
+                <div class="fact_card display_flex">
+                    <div class="fact">
+                        <img src="images/icons/projects.png" alt="" class="fact_icon">
+                        <h4 class="fact_number">1458</h4>
+                        <h5 class="fact_name text_lightgray">Project Finished</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact_icon">
-                    <h4 class="fact_number"></h4>
-                    <h5 class="fact_name"></h5>
+
+                <div class="fact_card display_flex">
+                    <div class="fact">
+                        <img src="images/icons/customers.png" alt="" class="fact_icon">
+                        <h4 class="fact_number">590</h4>
+                        <h5 class="fact_name text_lightgray">Clients Worked</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact_icon">
-                    <h4 class="fact_number"></h4>
-                    <h5 class="fact_name"></h5>
+
+                <div class="fact_card display_flex">
+                    <div class="fact">
+                        <img src="images/icons/email.png" alt="" class="fact_icon">
+                        <h4 class="fact_number">22578</h4>
+                        <h5 class="fact_name text_lightgray">Email Send</h5>
+                    </div>
                 </div>
+                
             </div>
         </section>
     </main> 
