--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </main> 
 
     <footer>
-
+        <p class="text_lightgray">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
